--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 </main>
 
 <footer>
-  &copy; 2025 Proteja com Amor  / IEMA TAMANCÃO
+  &copy; Club Robô Kit / Clube Exploradores de Idiomas
 </footer>
 
 <div id="modal-instructions" class="modal-overlay" role="dialog" aria-modal="true" aria-labelledby="modal-title" tabindex="-1">
