--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
       <li><strong>Colabore com as autoridades:</strong> Se possível, acompanhe o caso para garantir proteção contínua à vítima.</li>
       <li><strong>Compartilhe empatia:</strong> Apoie as vítimas e familiares, sem julgamentos e com muito amor.</li>
       <hr>
-<a href="https://www.gov.br/mdh/pt-br/assuntos/disque-100" target="_blank" class="btn-secondary">
+<a href="https://maiolaranja.github.io/contatos/" target="_blank" class="btn-secondary">
   Fazer denúncia agora
 </a>
     </ul>
